<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 Antonio Leiva Gordillo.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<resources>

    <string name="app_name">Car 4 You</string>
    <string name="app_name_extended">Car 4 You</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_ad_view">AdViewActivity</string>
    <string name="title_activity_front">FrontActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_successful">Login successful!</string>
    <string name="login_failed">Login failed!</string>
    <string name="turn_on_internet">Please turn on your internet connection.</string>
    <string name="connection_error">Connection error please wait.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="connection_failed">Connection failed, please restart.</string>
    <string name="title_activity_submission">SubmissionActivity</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="model_name">Model Name</string>
    <string name="model_year">Model Year</string>
    <string name="engine_capacity">Engine Capacity</string>
    <string name="milege">Mileage</string>
    <string name="price">Price</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="successful">Operation successful!</string>
    <string name="failed">There is something wrong!</string>
    <string name="home">Home</string>
    <string name="submitAd">Submit Ad</string>
    <string name="favourites">Favourites</string>
    <string name="my_ads">My Ads</string>
    <string name="login">Login</string>
    <string name="logOut">Log out</string>
    <string name="spin">spin</string>
    <string name="please_wait">Please wait</string>
    <string name="login_to_add_favourites"> You have to login to add/view favourites </string>
    <string name="menu_delete">delete</string>
    <string name="select_location">Select Location</string>
    <string name="select_body">Select Body Type</string>
    <string name="select_brand">Select Brand</string>
    <string name="select_condition">Select Condition</string>
    <string name="select_fuel_type">Select Fuel Type</string>
    <string name="select_transmission_type">Select Transmission Type</string>
    <string name="select_vehicle_type">Select Vehicle Type</string>
    <string name="check_mandatory_fields">Please check mandatory fields</string>
    <string name="no_user_ads">You don\'t have any submitted ads</string>
    <string name="filter_by_location">Filter by location</string>

</resources>
