<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cfu="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_material_dark"
        android:clickable="true"
        xmlns:test="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        tools:context="client.cfu.com.cfumaterial.AdSubmissionFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:id="@+id/carImage"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <com.andreabaccega.widget.FormEditText
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:id="@+id/titleText"
                test:testType="nocheck"
                android:hint="@string/title"
                android:text="new"
                android:layout_marginBottom="10dp" />

            <com.andreabaccega.widget.FormEditText
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                test:testType="nocheck"
                android:id="@+id/descriptionText"
                android:layout_marginBottom="10dp"
                android:hint="@string/description"
                android:text="new"
                android:inputType="textMultiLine" />

            <Spinner
                android:id="@+id/brand_spinner"
                android:layout_width="fill_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content" />

            <com.andreabaccega.widget.FormEditText
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:text="new"
                test:testType="nocheck"
                android:id="@+id/modelText"
                android:layout_marginBottom="10dp"
                android:hint="@string/model_name"

                />

            <com.andreabaccega.widget.FormEditText
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                test:testType="numeric"
                android:text="1991"
                android:inputType="number"
                android:id="@+id/modelYearText"
                android:layout_marginBottom="10dp"
                android:hint="@string/model_year" />

            <Spinner
                android:id="@+id/bodyType_spinner"
                android:layout_width="fill_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/condition_spinner"
                android:layout_width="fill_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/transmission_spinner"
                android:layout_width="fill_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/fuelType_spinner"
                android:layout_width="fill_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/vehicleType_spinner"
                android:layout_width="fill_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content" />

            <com.andreabaccega.widget.FormEditText
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                test:testType="numeric"
                android:inputType="number"
                android:text="1234"
                android:id="@+id/engineCapacityText"
                android:layout_marginBottom="10dp"
                android:hint="@string/engine_capacity"

                />

            <com.andreabaccega.widget.FormEditText
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:text="1234"
                test:testType="numeric"
                android:id="@+id/mileageText"
                android:inputType="number"
                android:layout_marginBottom="10dp"
                android:hint="@string/milege"

                />

            <com.andreabaccega.widget.FormEditText
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:id="@+id/priceText"
                android:inputType="number"
                android:text="1234"
                test:testType="numeric"
                android:layout_marginBottom="10dp"
                android:hint="@string/price"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:layout_marginBottom="100dp"
                android:id="@+id/submitButton"
                android:layout_gravity="center_horizontal" />

            </LinearLayout>

        <ProgressBar
            android:id="@+id/spinner"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:indeterminate="true"
            android:layout_gravity="center_horizontal" />
    </RelativeLayout>
</ScrollView>
